# UnifiedFloppyTool

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CI_FIX_ANALYSIS.md  CI_FIX_REPORT_v4.md  CI_REPORT_v3.5.0.md  CI_REPORT_v3.6.0.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CRITICAL_FIXES.md  CROSS_PLATFORM_FIXES.md  DOCS_INDEX.md  Doxyfile  FEATURES.md  GITHUB_FIX_README.md  GITHUB_SETUP.md  INDUSTRIAL_UPGRADE_PLAN.md  INSTALL.md  LICENSE  Makefile  NOTICE  PROJECT_AUDIT_2026-01-06.md  README.md  README_MERGE.md  RELEASE_NOTES.md  RELEASE_NOTES_v3.7.0.md  RELEASE_NOTES_v4.1.5_DRAFT.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  SUPPORT.md  TODO.md  TODO_CONSOLIDATED_2026-01-06.md  TODO_FUTURE.md  TODO_R18_CONSOLIDATED.md  UnifiedFloppyTool.pro  (+15 more)
docs/: API.md  (+175 more)
examples/: CMakeLists.txt  complete_system_demo.c  example_amiga_adf.c  example_applesauce_formats.c  example_bootblock_scanner.c  example_c64_protection.c  example_c64_protection_traits.c  example_d64_bam_prg.c  example_dmk.c  example_flux_to_usb.c  example_hardware_flux.c  example_hw_writer.c  example_kryoflux.c  example_msa.c  example_pc_atari_formats.c  example_track_encoder.c  example_v2_8_8_formats.c  example_weak_bits.c  example_woz2.c  example_woz_analyzer.c  example_xcopy_complete.c  example_xcopy_errors.c  examples.c  iuniversaldrive_demo.c  iuniversaldrive_example.c
gui/widgets/: CMakeLists.txt  trackgridwidget.cpp  trackgridwidget.h  uft_flux_view_widget.cpp  uft_flux_view_widget.h  uft_pll_panel.cpp  uft_pll_panel.h  uft_recovery_panel.cpp  uft_recovery_panel.h
lib/floppy/: CMakeLists.txt  README.md
libflux_core/: CMakeLists.txt
libflux_core/include/: apple_protection.h  bootblock_db.h  c64_protection.h  c64_protection_traits.h  cpc_meta.h  cpc_mfm.h  cpc_pipeline.h  disk_io.h  flux_consensus.h  flux_decode.h  flux_logical.h  flux_policy.h  flux_presets.h  flux_window.h  mfm_decode.h  mfm_ibm_encode.h  parameter_compensation.h  track_encoder.h  ufm_media.h  ufm_meta_export.h  uft_copylock.h  uft_crc.h  uft_error_handling.h  uft_gcr.h  uft_gwraw_reader.h  uft_hfe.h  uft_hfe_container.h  uft_iuniversaldrive.h  uft_logging.h  uft_mfm.h  uft_protection_analysis.h  uft_scp_reader.h  uft_statistical_decoder.h  uft_uca_api.h  uft_vfo_pll.h  uft_xdf.h  usb_writer.h  weak_bits.h  xcopy_errors.h  xcopy_protection.h
libflux_core/src/: Makefile  README.md  c64_protection.c  cpc_meta.c  cpc_mfm.c  cpc_pipeline.c  disk_io.c  flux_consensus.c  flux_core.c  flux_decode.c  flux_logical.c  flux_policy.c  flux_presets.c  flux_window.c  fluxdec.c  fluxdec.h  mfm_decode.c  parameter_compensation.c  protection_analyzer.c  protection_analyzer.h  ufm_cbm_protection_methods.c  ufm_cbm_protection_methods.h  ufm_media.c  ufm_meta_export.c  uft_access.c  uft_copylock.c  uft_crc.c  uft_drive_provider_greaseweazle.c  uft_drive_provider_mock.c  uft_drive_provider_scp.c  uft_error.c  uft_error_handling.c  uft_gcr.c  uft_gcr_threadsafe.c  uft_gwraw_reader.c  uft_gwraw_reader.c.old  uft_hfe.c  uft_hfe_container.c  uft_iuniversaldrive_core.c  uft_logging.c  (+14 more)
libflux_format/: CMakeLists.txt  d82.c  d82.h
libflux_format/include/: atari_formats.h  c64_formats.h  c64_gcr.h  cpc_formats.h  dmk.h  emulator_formats.h  hardware_formats.h  hxc_format.h  japanese_formats.h  libflux_format.h  msa.h  multi_formats.h  pc_formats.h  pipeline_formats.h  samdisk_api.h  uft_adf.h  uft_atr.h  uft_atx.h  uft_crc.h  uft_d64_v2.h  uft_d71.h  uft_d88.h  uft_dsk.h  uft_endian.h  uft_fdi.h  uft_gcrraw.h  uft_gwflux.h  uft_hfe.h  uft_imd.h  uft_img.h  uft_kfstream.h  uft_mfmraw.h  uft_td0.h  uft_xfd.h  woz2.h  woz_analyzer.h
libflux_format/src/: 1dd.c  2d.c  2mg.c  2mg.h  a2r.c  adaptive_mfm.c  adf.c  amiga_mfm.c  bpb.c  cfi.c  cpm.c  cqm.c  crt.c  crt.h  cwtool.c  d2m.c  d4m.c  d64.c  d64.h  d71.c  d71.h  d80.c  d81.c  d81.h  d88.c  dfi.c  dmk.c  dmk.h  do.c  ds2.c  dsc.c  dsk.c  dti.c  edsk_extdsk.c  edsk_extdsk.h  error_correction.c  f86.c  f86.h  fd.c  fdi.c  (+104 more)
libflux_hw/: CMakeLists.txt
libflux_hw/include/: applesauce_hw.h  fc5025_usb.h  fluxengine_usb.h  greaseweazle_usb.h  hw_writer.h  kryoflux_hw.h  xum1541_usb.h
libflux_unified/: CMakeLists.txt
libflux_unified/include/: unified_api.h
libflux_unified/src/: unified_api.c
src/adapters/: CMakeLists.txt  uft_adf_adapter.c  uft_d64_adapter.c  uft_img_adapter.c  uft_trd_adapter.c
src/algorithms/: CMakeLists.txt  uft_algorithms.c  uft_apple_gcr_decode.c  uft_bayesian_format.c  uft_gcr_viterbi.c  uft_gcr_viterbi_v2.c  uft_kalman_pll.c
src/analysis/: CMakeLists.txt  uft_anomaly_detect.c  uft_bitrate_analysis.c  uft_disk_quickscan.c  uft_fdc_analyzer.c  uft_format_suggest.c  uft_metrics.c  uft_ml_protection.c  uft_sector_compare.c  uft_surface_analysis.c  uft_surface_analyzer.c  uft_track_analysis.c  uft_track_analysis.h  uft_triage.c  uft_xcopy_algo.c
src/archive/: CMakeLists.txt  uff_container.c
src/batch/: CMakeLists.txt  uft_batch.c
src/c64/: CMakeLists.txt  uft_6502_disasm.c  uft_c64_prg.c  uft_cbm_disk.c  uft_cbm_drive_scan.c  uft_fastloader_db.c
src/cbm/: CMakeLists.txt  uft_cbm_dos.c
src/cli/: CMakeLists.txt  uft_batch_cli.c  uft_check_cli.c  uft_hist_cli.c  uft_main.c  uft_ml_cli.c  uft_training_cli.c
tests/: CMakeLists.txt  HARDWARE_TRUTH_TESTS.md  io_test.c  parser_test.c  run_tests  run_tests.c  smoke_test.c  test_2mg_plugin.c  test_3ds.c  test_a2r_plugin.c  test_adf.c  test_adf_bam.c  test_adf_plugin.c  test_adfcopy_backend.cpp  test_adfcopy_runners_protocol.cpp  test_air_cross_validate.c  test_align_fuse_bridge.c  test_amiga_extract.c  test_amiga_virus_db.c  test_amigados_validate.c  test_applesauce_hal.c  test_applesauce_provider_v2.cpp  test_applesauce_runners_protocol.cpp  test_assert_framework.c  test_atari.c  test_atr_plugin.c  test_atx_plugin.c  test_bam_editor.c  test_benchmark.c  test_bits.c  test_bootblock_scanner.c  test_c64_bam.c  test_c64_protection.c  test_c64_protection_ext.c  test_c64rom.c  test_cmd.c  test_confidence_v10.c  test_config_manager.c  test_core.c  test_cpm_fs.c  (+183 more)
web/: CMakeLists.txt  index.html
(+4459 files in other folders)
