# UFT Examples - Optional
file(GLOB EXAMPLE_SOURCES "*.c")
if(EXAMPLE_SOURCES AND TARGET uft_core)
    foreach(example_src ${EXAMPLE_SOURCES})
        get_filename_component(example_name ${example_src} NAME_WE)
        add_executable(${example_name} ${example_src})
        target_link_libraries(${example_name} PRIVATE uft_core)
    endforeach()
else()
    message(STATUS "Examples: Skipping - no sources or dependencies not ready")
endif()
